feat: body background

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,6 @@
 @import '~bootstrap/scss/bootstrap-utilities';
 @import '~bootstrap/scss/bootstrap-grid';
 @import '~bootstrap/scss/images';
+
+/* Base */
+@import './assets/scss/base';
