--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,18 @@
-<router-outlet></router-outlet>
+<header>
+    <app-header></app-header>
+</header>
+
+<nav>
+    <app-nav></app-nav>
+</nav>
+
+<main>
+    <router-outlet></router-outlet>
+    <footer>
+        <app-footer></app-footer>
+    </footer>
+</main>
+
+<aside>
+    <app-sidebar></app-sidebar>
+</aside>
