--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -4,18 +4,21 @@ body {
     font-size: 16px;
 }
 
-html {
-    background-color: #051122;
-}
-
 html,
 body {
     height: 100%;
 }
 
-body {
-    background-color: transparent;
+html {
+    background-color: #051122;
     background-image: url('./../images/base/background-artwork.jpg');
     background-position: center top;
     background-repeat: no-repeat;
+}
+
+
+body {
+    background-color: transparent;
+    margin: 0 auto;
+    max-width: 1280px
 }
