fix: base grid structure

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,9 @@
 :host {
     display: grid;
     grid-template-columns: 205px auto 200px;
+    grid-template-rows: 155px auto;
     grid-template-areas:
         "header header header"
-        "nav content sidebar"
         "nav content sidebar";
     height: 100%;
     width: 100%;
