feat: various tibia components

--- a/src/app/pages/news/news.component.html
+++ b/src/app/pages/news/news.component.html
@@ -1,3 +1,18 @@
-<tibia-content-wrapper>
-    eae
-</tibia-content-wrapper>
+<tibia-wrapper>
+    <tibia-header>
+        <h1 class="tibia-h1">News</h1>
+    </tibia-header>
+
+    <tibia-container>
+        <tibia-headline>
+            <tibia-icon [iconName]="'gear'" class="me-1"></tibia-icon>
+            <time class="tibia-caption">Aug 12 2022&nbsp;&#45;&nbsp;</time>
+            <h3 class="tibia-h3 text-truncate col">New Mounts</h3>
+        </tibia-headline>
+
+        <div class="px-3">
+            <p class="tibia-body tibia-first-letter">New mounts have been added to the Store today!</p>
+            <p class="tibia-body">A seasoned warrior knows how to make an entry, and so does a faithful companion: Fully armored! Saddle up your impressive Jousting Horse to charge into battle in style, gallop into the arena on the back of your striking Tourney Horse, and ride your distinguished Parade Horse through the streets of Thais to show off your chivalrous qualities. With a horse in full barding, nobody will ever rain on your parade again.</p>
+        </div>
+    </tibia-container>
+</tibia-wrapper>
