--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,6 +6,8 @@
         "header header header"
         "nav content sidebar";
     height: 100%;
+    margin: 0 auto;
+    max-width: 1280px;
     width: 100%;
 
     header {
@@ -18,6 +20,7 @@
 
     main {
         grid-area: content;
+        overflow: hidden;
     }
 
     aside {
