--- a/src/app/components/tibia/wrapper/wrapper.component.scss
+++ b/src/app/components/tibia/wrapper/wrapper.component.scss
@@ -10,10 +10,11 @@
     padding: 10px 3px;
     pointer-events: none;
 
-    > div {
+    > div:first-child {
         background-color: #debb9d;
         border-left: 2px solid #3a3738;
         border-right: 2px solid #3a3738;
+        display: flow-root;
         pointer-events: all;
         position: relative;
         z-index: -2;
