--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,4 @@
 
 /* @tibia/components */
 @import './app/components/tibia/assets/scss/fonts';
+@import './app/components/tibia/assets/scss/buttons';
