--- a/src/app/components/tibia/wrapper/wrapper.component.scss
+++ b/src/app/components/tibia/wrapper/wrapper.component.scss
@@ -1,22 +1,27 @@
 :host {
     background:
-        url('./../assets/images/corner-tl.gif') no-repeat left top,
-        url('./../assets/images/corner-tr.gif') no-repeat right top,
-        url('./../assets/images/corner-bl.gif') no-repeat left bottom,
-        url('./../assets/images/corner-br.gif') no-repeat right bottom,
-        url('./../assets/images/border-1.gif') repeat-x center 4px,
-        url('./../assets/images/border-1.gif') repeat-x center calc(100% - 4px);
+        url('./../assets/images/wrapper/corner-tl.gif') no-repeat left top,
+        url('./../assets/images/wrapper/corner-tr.gif') no-repeat right top,
+        url('./../assets/images/wrapper/corner-bl.gif') no-repeat left bottom,
+        url('./../assets/images/wrapper/corner-br.gif') no-repeat right bottom,
+        url('./../assets/images/wrapper/border-top.gif') repeat-x center 4px,
+        url('./../assets/images/wrapper/border-bottom.gif') repeat-x center calc(100% - 4px);
     display: block;
-    padding: 10px 3px;
-    pointer-events: none;
+    padding: 10px 5px;
+    overflow: hidden;
+    position: relative;
 
-    > div:first-child {
+    &::before {
+        content: '';
         background-color: #debb9d;
         border-left: 2px solid #3a3738;
         border-right: 2px solid #3a3738;
-        display: flow-root;
-        pointer-events: all;
-        position: relative;
+        bottom: 10px;
+        display: block;
+        left: 3px;
+        position: absolute;
+        right: 3px;
+        top: 10px;
         z-index: -2;
     }
 }
