feat: tibia menu finalizado

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,10 @@
-<header>
-    <app-header></app-header>
-</header>
+<header appheader></header>
 
-<nav>
-    <app-nav></app-nav>
-</nav>
+<nav appNav></nav>
 
 <main>
     <router-outlet></router-outlet>
-    <footer>
-        <app-footer></app-footer>
-    </footer>
+    <footer appFooter></footer>
 </main>
 
-<aside>
-    <app-sidebar></app-sidebar>
-</aside>
+<aside appSidebar></aside>
