--- a/src/app/components/tibia/menu/menu.component.scss
+++ b/src/app/components/tibia/menu/menu.component.scss
@@ -1,18 +1,17 @@
-:host {
+ul:host {
     background:
         url('./../assets/images/chain-box/box-top.gif') no-repeat top,
         url('./../assets/images/chain-box/box-bottom.gif') no-repeat bottom;
-    display: flex;
-    padding: 12px 0 0 0;
+    padding: 12px 5px;
+    margin: 0 auto;
     width: 180px;
 
-    ul {
-        list-style: none;
-        display: flex;
-        flex-direction: column;
-        padding-left: 0;
-        margin-left: auto;
-        margin-right: auto;
-        width: 170px;
+    ::ng-deep {
+        ul, li, a {
+            list-style: none;
+            text-decoration: none;
+            user-select: none;
+            cursor: pointer;
+        }
     }
 }
