--- a/src/app/components/tibia/assets/scss/colors.scss
+++ b/src/app/components/tibia/assets/scss/colors.scss
@@ -1,2 +1,7 @@
-$accent-color: rgb(252, 209, 92, 1);
-$accent-hover-color: rgb(255, 229, 99);
+$accent: #fcd15c;
+$accent-hover: #ffe563;
+
+$anchor: #004294;
+$anchor-hover: #0063dc;
+
+$creature-quote: #d14703;
