--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,12 @@
-/* Bootstrap */
+/* bootstrap */
 @import '~bootstrap/scss/bootstrap-reboot';
 @import '~bootstrap/scss/bootstrap-utilities';
 @import '~bootstrap/scss/bootstrap-grid';
 @import '~bootstrap/scss/images';
 
-/* Base */
-@import './assets/scss/base';
-
 /* @tibia/components */
 @import './app/components/tibia/assets/scss/fonts';
 @import './app/components/tibia/assets/scss/buttons';
+
+/* Base */
+@import './assets/scss/base';
